@@ -13,6 +13,7 @@ Version 2.1.1
 
 - Fixed Jython compatibility (#1205)
 - Fixed Python curly-brace string interpolation highlighting (PR#544)
+- Fixed Julia string interpolation (#1170)
 - Many smaller fixes to various lexers
 
 
